<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
				 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
				 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>dasniko.keycloak</groupId>
	<artifactId>keycloak-extensions-demo</artifactId>
	<version>1.0-SNAPSHOT</version>

	<packaging>pom</packaging>

	<modules>
		<module>utils</module>
		<module>custom-sms-spi</module>
		<module>event-listener</module>
		<module>tokenmapper</module>
		<module>flintstones-userprovider</module>
		<module>rest-endpoint</module>
		<module>requiredaction</module>
		<module>magiclink</module>
		<module>email</module>
		<module>conditional-authenticators</module>
		<module>authenticators</module>
  	<module>initializer</module>
		<module>actiontoken</module>
		<module>admin-ui</module>
		<module>scheduled-task</module>
		<module>passwords</module>
		<module>validators</module>
		<module>various</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<aws.version>2.35.0</aws.version>
		<bytebuddy.version>1.14.11</bytebuddy.version>
		<git-commit-id.version>9.0.2</git-commit-id.version>
<!--		<keycloak.version>26.2.1</keycloak.version>-->
		<keycloak.version>999.0.0-SNAPSHOT</keycloak.version>
		<maven.compiler.version>3.15.0</maven.compiler.version>
		<maven.compiler.release>21</maven.compiler.release>
		<maven-shade.version>3.6.1</maven-shade.version>
		<maven-surefire.version>3.5.4</maven-surefire.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.github.dasniko</groupId>
				<artifactId>keycloak-spi-bom</artifactId>
				<version>${keycloak.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>software.amazon.awssdk</groupId>
				<artifactId>sns</artifactId>
				<version>${aws.version}</version>
				<exclusions>
					<exclusion>
						<groupId>software.amazon.awssdk</groupId>
						<artifactId>netty-nio-client</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>software.amazon.awssdk</groupId>
				<artifactId>ses</artifactId>
				<version>${aws.version}</version>
				<exclusions>
					<exclusion>
						<groupId>software.amazon.awssdk</groupId>
						<artifactId>netty-nio-client</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>net.bytebuddy</groupId>
				<artifactId>byte-buddy</artifactId>
				<version>${bytebuddy.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>net.bytebuddy</groupId>
				<artifactId>byte-buddy-agent</artifactId>
				<version>${bytebuddy.version}</version>
			</dependency>
			<dependency>
				<groupId>org.keycloak</groupId>
				<artifactId>keycloak-junit5</artifactId>
				<version>${keycloak.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven.compiler.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-shade-plugin</artifactId>
					<version>${maven-shade.version}</version>
					<configuration>
						<createDependencyReducedPom>false</createDependencyReducedPom>
						<filters>
							<filter>
								<artifact>*:*</artifact>
								<excludes>
									<exclude>META-INF/*.MF</exclude>
									<exclude>META-INF/*.SF</exclude>
									<exclude>META-INF/*.DSA</exclude>
									<exclude>META-INF/*.RSA</exclude>
								</excludes>
							</filter>
						</filters>
					</configuration>
					<executions>
						<execution>
							<phase>package</phase>
							<goals>
								<goal>shade</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven-surefire.version}</version>
				</plugin>
				<plugin>
					<groupId>io.github.git-commit-id</groupId>
					<artifactId>git-commit-id-maven-plugin</artifactId>
					<version>${git-commit-id.version}</version>
					<executions>
						<execution>
							<id>get-the-git-infos</id>
							<goals>
								<goal>revision</goal>
							</goals>
						</execution>
						<execution>
							<id>validate-the-git-infos</id>
							<goals>
								<goal>validateRevision</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<abbrevLength>8</abbrevLength>
						<generateGitPropertiesFile>true</generateGitPropertiesFile>
						<failOnNoGitDirectory>false</failOnNoGitDirectory>
						<offline>true</offline>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<repositories>
		<repository>
			<id>central-portal-snapshots</id>
			<name>Central Portal Snapshots</name>
			<url>https://central.sonatype.com/repository/maven-snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>daily</updatePolicy>
			</snapshots>
		</repository>
	</repositories>

</project>
